# Sunshade_HAN

./: README.md
Diagrammen/: Domain_diagram.xmi  Sequence_Diagram_Sunshade.txt  Sequence_Diagram_Sunshade.xmi  class_Diagram.xmi  state_diagram_Sunscreen.xmi  state_diagram_umbrello.xmi  usecase_diagram_Sunscreen.xmi
Documentatie/: Reflectie_zonnescherm.docx  Usecase_Zonnescherm_V02.docx  ~$flectie_zonnescherm.docx
Documentatie/Reviews/: Beoordeling Michelle_Bas.xlsx  Beoordeling ons Mies_Jolien.xlsx  Usecase_Zonnescherm_V01_review_Kevin.docx
code/Sunshade_V01/: CMakeLists.txt  Motor.cpp  Motor.h  Sensor_Inside.cpp  Sensor_Inside.h  Sensor_Outside.cpp  Sensor_Outside.h  Sensor_UV.cpp  Sensor_UV.h  Sensors.cpp  Sensors.h  Sunshade.cpp  Sunshade.h  main.cpp  test.cpp  test.h
code/Test_Sunshade/: CMakeLists.txt  main.cpp  sunshade_test.cpp  sunshade_test.h
code/build-Sunshade_V01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
code/build-Sunshade_V01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-405d58e056601039d621.json  codemodel-v2-171f960509b8337abad6.json  index-2022-12-23T10-06-04-0992.json  (+1 more)
code/build-Sunshade_V01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
code/build-test_Sunshade-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
code/build-test_Sunshade-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+45 files in other folders)
